<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DetalhesBoleiaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/origem"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etOrigem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/destino"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/data_hora"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etData_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/lugares_disponiveis"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etLugares_disponiveis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/preco"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/viatura_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etViatura_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
